--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,11 @@ body{
     flex-grow: 1;
     height: 100%;
     border: 1px solid #f7f7f7;
+    outline: none;
+}
+.input-text:focus,
+.input-text:active{
+    border: 2px solid #32a093c9;
 }
 
 /* Icons */
