--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,7 @@ body{
     overflow: auto;
 }
 .contacts-list .contact{
+    position: relative;
     height: 80px;
     padding: 10px 20px;
     border-bottom: 1px solid #f2f2f2;
@@ -227,6 +228,20 @@ body{
 }
 .contacts-list .contact.active{
     background-color: #ccc;
+}
+/* Online Status */
+.contact .status{
+    position: absolute;
+    top: 50%;
+    right: 25px;
+    transform: translateY(-50%);
+    width: 15px;
+    height: 15px;
+    border: 1px solid #888;
+    border-radius: 50%;
+}
+.contact .status.online{
+    background-color: rgb(0, 184, 0);
 }
 
 
